# brick-grid

./: README.md  brick-grid.cabal
example/: Main.hs
src/Brick/: Grid.hs
src/Brick/Grid/: TH.hs
