cabal-version:  2.2
name:           brick-grid
version:        0.0.0.0
author:         Charles Taylor
maintainer:     charlestaylor95@gmail.com
copyright:      2020 Charles Taylor
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/CharlesTaylor7/brick-grid

common common
  default-language: Haskell2010
  ghc-options:
      -freverse-errors
      -ferror-spans
      -Werror=missing-home-modules
      -fwarn-incomplete-patterns
      -O0 -j2 +RTS -A128m -n2m -qg -RTS

  default-extensions:
    -- required to make type aliases
      RankNTypes
    , FlexibleContexts
    , TypeFamilies
    , ConstraintKinds
    -- deriving extensions
    , StandaloneDeriving
    , DeriveGeneric
    , DerivingVia
    , GeneralizedNewtypeDeriving
    , DeriveFunctor
    , DeriveTraversable
    , EmptyDataDeriving
    , DeriveAnyClass
    -- required to effectively document code
    , ScopedTypeVariables
    -- awesome debugging by having the compiler tell you the type of something
    , PartialTypeSignatures
    -- patterns
    , PatternSynonyms
    , ViewPatterns
    -- nice to have
    , OverloadedStrings
    , BangPatterns
    , TypeApplications
    , LambdaCase
    , TupleSections
    , BlockArguments
    , NumericUnderscores
    , NamedFieldPuns
    -- generic lens
    , DuplicateRecordFields
    , OverloadedLabels

library
  import: common
  hs-source-dirs:
    src
  build-depends:
      base >= 4.13 && < 5.0
    , brick
    , vty
    , containers
  exposed-modules:
    Brick.Grid
