cabal-version:  2.2
name:           brick-grid
version:        0.0.0.0
author:         Charles Taylor
maintainer:     charlestaylor95@gmail.com
copyright:      2020 Charles Taylor
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/CharlesTaylor7/brick-grid

common common
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wno-name-shadowing
    -Werror=missing-home-modules
    -O0 -j2 +RTS -A128m -n2m -qg -RTS
  build-depends:
    base >= 4.0 && < 4.14

library
  import: common
  hs-source-dirs: src
  build-depends:
      brick
    , microlens
    , microlens-mtl
    , microlens-th
    , template-haskell
    , mtl
  exposed-modules:
    Brick.Grid
  other-modules:
    Brick.Grid.TH

executable example
  import: common
  hs-source-dirs: example
  main-is: Main.hs
  build-depends:
      brick
    , brick-grid
    , vty
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
